--- a/views/home.html
+++ b/views/home.html
@@ -15,10 +15,9 @@
 <body>
     <header>
         <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercado liebre" width="120">
-
         <input type="search" name="buscar" id="buscar">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <br>
+
         <div class="compras">
             <i class="fa-solid fa-hand-holding-dollar"></i>
             <span>Comprá en cuotas y sin tarjeta de crédito</span>
@@ -31,9 +30,9 @@
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
                 <br>
-                <li><a href="#">Creá tu cuenta</a></li>
-                <li><a href="#">Ingresá</a></li>
-                <li><a href="#">Mis compras</a></li>
+                <li><a href="#">Creá tu cuenta </a><i class="fa-regular fa-id-card"></i></li>
+                <li><a href="#">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="#">Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
         <br>
@@ -106,17 +105,17 @@
 
     <footer>
         <div class="footer">
-            <i class="fa-solid fa-credit-card"></i>
+            <i class="fa-solid fa-credit-card" style="color: #1259c3;"></i>
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
 
-            <i class="fa-solid fa-gift"></i>
+            <i class="fa-solid fa-gift" style="color: #1259c3;"></i>
             <h3>Envío gratis desde $ 2.500</h3>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
 
-            <i class="fa-solid fa-user-shield"></i>
+            <i class="fa-solid fa-user-shield" style="color: #1259c3;"></i>
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
