--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,47 +1,190 @@
 * {
-    background-color: #EAC926;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
+
+:root {
+    --Amarillo: #EAC926;
+    --Azul: #03264C;
+    --Celeste: #1259c3;
+    --Gris-oscuro: #666;
+    --Gris-claro: #ebebeb;
+    --Verde: #39b54a;
+    --Negro: black;
+    --blanco: white;
+}
+
+/*----------------H-----E-----A-----D-----E-----R-------------------*/
 
 body {
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    font-size: 14px;
+    background-color: var(--Amarillo);
 }
 
-nav ul li i {
-    margin-left: 5px;
+header {
+    width: 90%;
+    margin: 0px auto;
+    margin-bottom: 30px;
 }
 
-#buscar {
-    border-radius: 5px;
-    margin-left: 20px;
+.logo-search {
+    text-align: center;
+    display: flex;
+
 }
 
-.titulares {
-    font-size: 24px;
+.logo-search .logo {
+    width: 50%;
+    text-align: start;
+    display: inline;
+}
+
+.logo-search .search {
+    width: 50%;
+    display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
-.precio {
-    font-size: 18px;
+.logo-search .search .search-input {
+    width: 150px;
+    text-align: end;
+    border-radius: 5px;
+    border: 1px solid var(--Gris-oscuro);
+    background-color: var(--blanco);
 }
 
-.descuento {
-    font-size: 16px;
+.logo-search .search .search-input input {
+    width: 120px;
+    height: 20px;
+    border: none;
+    outline: none;
+    text-align: left;
 }
 
-.descripcion {
-    font-size: 16px;
+.logo-search .search .search-input i {
+    height: 20px;
+    width: 20px;
+    color: var(--Negro);
+    border-radius: 50px;
 }
 
 .compras {
     text-align: center;
-
+    margin-bottom: 30px;
 }
 
 .burger-menu {
-    color: #03264C;
     text-align: center;
 }
+
+.burger-menu #burguer {
+    border: solid 1px white;
+    padding: 5px;
+    border-radius: 3px;
+    background-color: var(--Azul);
+    color: white;
+}
+
+/*--- Menu---*/
+
+header nav {
+    display: none;
+}
+
+
+/*------------------------M--------A--------I--------N---------------------------------*/
+
+main {
+    width: 90%;
+    margin: 0px auto;
+    text-align: center;
+}
+
+.banner {
+    width: 100%;
+    margin: 0px auto;
+}
+
+.titulares {
+    margin: 10px;
+    font-size: 24px;
+    align-items: center;
+}
+
+.ultima-visita {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.ultima-visita article {
+    margin: 10px;
+    width: 210px;
+    height: 300px;
+    border: solid 5px var(--Gris-claro);
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+.ultima-visita article .descripcion {
+    border-top: solid 1px var(--Gris-claro);
+    padding: 15px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+
+#icon {
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+}
+
+.ultima-visita article .precio-descuento {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.ultima-visita article .precio {
+    font-size: 18px;
+    justify-content: flex-start;
+}
+
+.ultima-visita article .descuento {
+    font-size: 16px;
+    justify-content: flex-end;
+    color: var(--Verde);
+}
+
+.ultima-visita article .descrip {
+    font-size: 16px;
+    width: 100%;
+    margin-top: 10px;
+}
+
+/*------------F-----O-----O-----T-----E-----R----------------*/
 
 .footer {
     text-align: center;
@@ -53,5 +196,90 @@ nav ul li i {
 }
 
 .footer h3 {
-    color: black;
+    color: var(--Negro);
+}
+
+@media (min-width: 460px) {
+    /* Tablets */
+
+    .burger-menu {
+        display: none;
+    }
+
+    header .container {
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }
+
+    .container .logo-search {
+        width: 50%;
+    }
+
+    .container .compras {
+        width: 50%;
+        margin: 0px auto;
+        display: flex;
+        justify-content: end;
+    }
+
+    header nav {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        align-content: space-between;
+    }
+
+    header nav .navegador {
+        width: 100%;
+        height: auto;
+        display: flex;
+        list-style: none;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: space-between;
+        align-items: center;
+    }
+
+    header nav .navegador .conte-1 {
+        margin: 10px;
+        display: flex;
+        text-decoration: none;
+        cursor: pointer;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+        align-content: center;
+    }
+
+    header nav .navegador .conte-2 {
+        margin: 10px;
+        display: flex;
+        text-decoration: none;
+        cursor: pointer;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-items: flex-start;
+        align-content: center;
+    }
+
+    header nav .navegador a {
+        margin: 0px 3px;
+        color: var(--Azul);
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    header nav .navegador a i {
+        color: var(--Celeste);
+    }
+}
+
+@media (min-width: 768px) {
+    /* Laptop */
 }
