--- a/views/home.html
+++ b/views/home.html
@@ -7,77 +7,111 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Mercado Liebre</title>
 </head>
 
 <body>
     <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercado liebre" width="120">
-        <input type="search" name="buscar" id="buscar">
-        <i class="fa-solid fa-magnifying-glass"></i>
-
-        <div class="compras">
-            <i class="fa-solid fa-hand-holding-dollar"></i>
-            <span>Comprá en cuotas y sin tarjeta de crédito</span>
+        <div class="container">
+            <div class="logo-search">
+                <div class="logo">
+                    <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercado liebre" width="120">
+                </div>
+                <div class="search">
+                    <div class="search-input">
+                        <input type="search" name="buscar" id="buscar" placeholder="Buscar Productos, Marcas">
+                        <span><i class="fa-solid fa-magnifying-glass" id="lupa"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="compras">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <span>Comprá en cuotas y sin tarjeta de crédito</span>
+            </div>
         </div>
-
         <nav>
-            <ul>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
-                <br>
-                <li><a href="#">Creá tu cuenta </a><i class="fa-regular fa-id-card"></i></li>
-                <li><a href="#">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i></li>
-                <li><a href="#">Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
+            <ul class="navegador">
+                <div class="conte-1">
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">Vender</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </div>
+                <div class="conte-2">
+                    <li><a href="#">Creá tu cuenta </a><i class="fa-regular fa-id-card"></i></li>
+                    <li><a href="#">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="#">Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
+                </div>
             </ul>
         </nav>
-        <br>
+
         <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" id="burguer"></i>
         </div>
     </header>
 
     <main>
-        <img src="/images/img-home-banner.jpg" alt="BANNER" width="90%">
-        <br>
-        <section>
-            <h3 class="titulares">Basado en tu última visita</h3>
-            <br>
+        <img class="banner" src="/images/img-home-banner.jpg" alt="BANNER">
+
+        <!--     ******** Basado en las Ultimas Visitas  ********     -->
+
+        <h3 class="titulares">Basado en tu última visita</h3>
+        <section class="ultima-visita">
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200">
-                <p class="precio">$6.770</p>
-                <p class="descuento">40% OFF</p>
-                <p class="descripcion"><b>Cafetera Moulinex</b></p>
+                <div class="img"><img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200"></div>
+                <div class="descripcion">
+                    <i class="fa-solid fa-truck-fast" id="icon"></i>
+                    <div class="precio-descuento">
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p>
+                    </div>
+                    <p class="descrip"><b>Cafetera Moulinex</b></p>
+                </div>
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook" width="200">
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% OFF</p>
-                <p class="descripcion"><b>MacBook Pro 2019</b></p>
+                <div class="img"><img src="/images/img-macbook-pro-2019.jpg" alt="Macbook" width="200"></div>
+                <div class="descripcion">
+                    <i class="fa-solid fa-truck-fast" id="icon"></i>
+                    <div class="precio-descuento">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
+                    <p class="descrip"><b>MacBook Pro 2019</b></p>
+                </div>
             </article>
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsun Galaxy" width="200">
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% OFF</p>
-                <p class="descripcion"><b>Samsung Galaxy S10</b></p>
+                <div class="img"><img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsun Galaxy" width="200"></div>
+                <div class="descripcion">
+                    <i class="fa-solid fa-truck-fast" id="icon"></i>
+                    <div class="precio-descuento">
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+                    </div>
+                    <p class="descrip"><b>Samsung Galaxy S10</b></p>
+                </div>
             </article>
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="Smart TV" width="200">
-                <p class="precio">$23.200</p>
-                <p class="descuento">10% OFF</p>
-                <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
+                <div class="img"><img src="/images/img-tv-samsung-smart.jpg" alt="Smart TV" width="200"></div>
+                <div class="descripcion">
+                    <i class="fa-solid fa-truck-fast" id="icon"></i>
+                    <div class="precio-descuento">
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">10% OFF</p>
+                    </div>
+                    <p class="descrip"><b>SmartTv Samsung 43"</b></p>
+                </div>
             </article>
         </section>
 
-        <section>
-            <h3 class="titulares">Sección de Ofertas</h3>
-            <br>
+        <!--  **********   Seccion Ofertas  **********  -->
+
+        <h3 class="titulares">Sección de Ofertas</h3>
+        <section class="ofertas">
+            <!--
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200">
+                <div><img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200"></div>
                 <p class="precio">$6.770</p>
                 <p class="descuento">40% OFF</p>
                 <p class="descripcion"><b>Cafetera Moulinex</b></p>
@@ -99,7 +133,7 @@
                 <p class="precio">$23.200</p>
                 <p class="descuento">10% OFF</p>
                 <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
-            </article>
+            </article> -->
         </section>
     </main>
 
@@ -119,6 +153,7 @@
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
+            <br>
 
             <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
         </div>
