Actualizando y terminado Login Register

--- a/views/home.html
+++ b/views/home.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Mercado Liebre</title>
 </head>
 
@@ -17,7 +18,9 @@
         <div class="container">
             <div class="logo-search">
                 <div class="logo">
-                    <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercado liebre" width="120">
+                    <a href="/">
+                        <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercado liebre" width="120">
+                    </a>
                 </div>
                 <div class="search">
                     <div class="search-input">
@@ -40,8 +43,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </div>
                 <div class="conte-2">
-                    <li><a href="#">Creá tu cuenta </a><i class="fa-regular fa-id-card"></i></li>
-                    <li><a href="#">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="/register">Creá tu cuenta </a><i class="fa-regular fa-id-card"></i></li>
+                    <li><a href="/login">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="#">Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
                 </div>
             </ul>
@@ -106,10 +109,10 @@
         </section>
 
         <!--  **********   Seccion Ofertas  **********  -->
-
+        <!--
         <h3 class="titulares">Sección de Ofertas</h3>
         <section class="ofertas">
-            <!--
+            
             <article>
                 <div><img src="/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200"></div>
                 <p class="precio">$6.770</p>
