--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,18 +15,19 @@
     --blanco: white;
 }
 
-/*----------------H-----E-----A-----D-----E-----R-------------------*/
-
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     background-color: var(--Amarillo);
 }
 
+/*----------------H-----E-----A-----D-----E-----R-------------------*/
+
 header {
     width: 90%;
     margin: 0px auto;
     margin-bottom: 30px;
+    border-bottom: 1px solid var(--Negro);
 }
 
 .logo-search {
@@ -81,11 +82,11 @@ header {
 }
 
 .burger-menu #burguer {
-    border: solid 1px white;
+    border: solid 1px var(--blanco);
     padding: 5px;
     border-radius: 3px;
     background-color: var(--Azul);
-    color: white;
+    color: var(--blanco);
 }
 
 /*--- Menu---*/
@@ -94,105 +95,30 @@ header nav {
     display: none;
 }
 
-
 /*------------------------M--------A--------I--------N---------------------------------*/
 
-main {
-    width: 90%;
-    margin: 0px auto;
-    text-align: center;
-}
-
-.banner {
-    width: 100%;
-    margin: 0px auto;
-}
-
-.titulares {
-    margin: 10px;
-    font-size: 24px;
-    align-items: center;
-}
-
-.ultima-visita {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.ultima-visita article {
-    margin: 10px;
-    width: 210px;
-    height: 300px;
-    border: solid 5px var(--Gris-claro);
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-}
-
-.ultima-visita article .descripcion {
-    border-top: solid 1px var(--Gris-claro);
-    padding: 15px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: space-between;
-}
-
-#icon {
-    display: block;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #39b54a;
-    background-color: #FFF;
-    border-radius: 50%;
-    position: absolute;
-    right: 20px;
-    top: -15px;
-}
-
-.ultima-visita article .precio-descuento {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-}
-
-.ultima-visita article .precio {
-    font-size: 18px;
-    justify-content: flex-start;
-}
-
-.ultima-visita article .descuento {
-    font-size: 16px;
-    justify-content: flex-end;
-    color: var(--Verde);
-}
-
-.ultima-visita article .descrip {
-    font-size: 16px;
-    width: 100%;
-    margin-top: 10px;
-}
 
 /*------------F-----O-----O-----T-----E-----R----------------*/
 
+footer {
+    width: 90%;
+    margin-top: 30px;
+    margin: 0px auto;
+    border-top: 1px solid var(--Negro);
+}
+
 .footer {
     text-align: center;
+    margin-top: 10px;
 }
 
 .footer i {
     margin-bottom: 10px;
     size: 2em;
+}
+
+.footer p {
+    margin-bottom: 10px;
 }
 
 .footer h3 {
@@ -269,7 +195,7 @@ main {
     }
 
     header nav .navegador a {
-        margin: 0px 3px;
+        margin: 0px 5px;
         color: var(--Azul);
         text-decoration: none;
         cursor: pointer;
